--- a/chrome/assets/css/witness.css
+++ b/chrome/assets/css/witness.css
@@ -1,66 +1,24 @@
-/* Toggle switches taken from w3schools.com https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_switch */
+/*
+ * Copyright 2020 Don Patterson, github: @djp3 email: d_j_p_3 at djp3.net
+ *
+ *  This file is part of the Witness This Media Chrome Extension (WTMCE).
+
+    WTMCE is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    WTMCE is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with WTMCE.  If not, see <https://www.gnu.org/licenses/>.
+
+*/
+
 
 body{
-	width:140px;
+	width:175px;
 }
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-
-.switch input { 
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked + .slider {
-  background-color: rgb(40,167,69);
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px rgb(0,0,0);
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
-
-
